# C-AlgoTrader

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  build_run_backtest.sh
app/: CMakeLists.txt  backtest.cpp  main.cpp
src/: CMakeLists.txt
src/backtest/: BacktestMarketDataAdapter.cpp  BacktestMarketDataAdapter.hpp  Backtester.cpp  Backtester.hpp  CMakeLists.txt  README.md
src/broker/: BrokerBase.hpp  CMakeLists.txt  DecimalStubs.cpp  IBKR.cpp  IBKR.hpp  IBKRStubs.cpp  IBKRStubs.hpp  SimulatedBroker.cpp  SimulatedBroker.hpp
src/config/: algo_trader.json  config.json  strategies.json
src/data_access/: CMakeLists.txt  CSVParser.cpp  CSVParser.hpp  DataStitcher.cpp  DataStitcher.hpp  MarketCondition.cpp  MarketCondition.hpp  MarketData.cpp  MarketData.cxx  MarketData.hpp
src/oms/: CMakeLists.txt  Order.cpp  Order.hpp  OrderManagement.cpp  OrderManagement.hpp  OrderValidator.cpp  OrderValidator.hpp  Position.cpp  Position.hpp
src/pyhton/: data_download.py  main.py
src/python/: data_download.py  main.py  test.py
src/strategy_engine/: CMakeLists.txt  MACD.hpp  MEANREV.hpp  RSI.hpp  Strategy.hpp  StrategyAttribute.hpp  StrategyBase.cpp  StrategyBase.hpp  StrategyData.hpp  StrategyEngine.cpp  StrategyEngine.hpp  StrategyFactory.cpp  StrategyFactory.hpp
src/util/: CMakeLists.txt  Config.cpp  Config.hpp  DateTimeConversion.cpp  DateTimeConversion.hpp
tests/: CMakeLists.txt
tests/backtest_tests/: CMakeLists.txt  MockMarketDataAdapter.hpp  Tests_Backtester.cpp  Tests_Integration.cpp
tests/backtest_tests/data/: marketData_AAPL_2025-03-31.csv
tests/broker_tests/: CMakeLists.txt  Tests_SimulatedBroker.cpp  Tests_StrategyEngine.cpp
tests/data_access_tests/: CMakeLists.txt  Tests_CSVParser_ParseToMarketCondition.cpp  Tests_CSVParser_ParserCSV.cpp  Tests_CSVParser_Tokenise.cpp  Tests_MarketData.cpp
tests/data_access_tests/test_data/: market_condition_test_02.csv  market_data_test.csv  market_data_test_1.csv  market_data_test_2.csv
tests/oms_tests/: CMakeLists.txt  Tests_Orders.cpp  Tests_Positions.cpp  Tests_Validator.cpp  Tests_oms.cpp
tests/strategy_tests/: CMakeLists.txt  Tests_MACD.cpp  Tests_RSI.cpp  Tests_StrategyEngine.cpp  Tests_StrategyFactory.cpp
tests/strategy_tests/test_data/: config_test.json  market_data_for_buy.csv  market_data_for_buy_macd.csv  market_data_for_hold.csv  market_data_for_sell.csv  strategies.json  strategies_active_test.json  strategies_active_test_consolidated.json  strategies_consolidated.json
tests/util_tests/: CMakeLists.txt  Tests_DateTimeConversion.cpp  Tests_JSON_Parse.cpp
tests/util_tests/test_data/: config_test.json
